--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,8 +1,53 @@
-<!-- login.html-->
-<h1>Please login</h1>
-<br>
-<form action="" method="post">
-    <input type="text" placeholder="Username" name="admin" value="{{ request.form.username}}">
-    <input type="password" placeholder="Password" name="admin" value="{{request.form.password}}">
-<input class="btn btn-default" type="submit" value="Login">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>{% block title %}{% endblock %}</title>
+    <!-- Bootstrap core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/registerbusiness">Register business</a></li>
+            <li role="presentation"><a href="/mybusinesses">My businesses</a></li>
+            <li role="presentation"><a href="/results">Search</a></li>
+            <!--<li role="presentation"><a href="/signup">Sign Up</a></li>-->
+            <li role="presentation"><a href="/login">Log Out</a></li>
+            <!--<li role="presentation"><a href="http://flask.pocoo.org" target="_blank">More About Flask</a></li>-->
+          </ul>
+        </nav>
+      </div>
+      {% block body %}
+      {% endblock %}
+      
+      {%if error%}
+        <p class="error"><strong>Error:</strong> {{error}}</p>
+      {%endif%}
+    </div> <!-- /container -->
+    <div class="jumbotron">
+        <h1>Make your business easy to find</h1>
+        <p class="lead">Read and write reviews on other businesses</p>
+      </div>
+      <h1>Sign up</h1>
+      <br>
+      <form action="/">
+          <input type="text" placeholder="Username" name="username" value="{{ request.form.username}}">
+          <input type="password" placeholder="Password" name="password" value="{{request.form.password}}">
+      <input class="btn btn-default" type="submit" value="Sign Up">
+      <h1>Please login</h1>
+      <br>
+      <form action="/">
+          <input type="text" placeholder="Username" name="admin" value="{{ request.form.username}}">
+          <input type="password" placeholder="Password" name="admin" value="{{request.form.password}}">
+      <input class="btn btn-default" type="submit" value="Login">
+      </form>
+      <footer class="footer">
+        <p>© 2018 WeConnect</p>
+      </footer>
+  </body>
+</html>
