--- a/app/templates/mybusinesses.html
+++ b/app/templates/mybusinesses.html
@@ -22,6 +22,6 @@
   </tr>
 </table>
 
-<input class="btn btn-default" type="submit" value="Update business profile">
-<input class="btn btn-default" type="submit" value="Delete business profile">
+<li role="presentation"><a href="/registerbusiness">Update business profile</a></li>
+<li role="presentation"><a href="/registerbusiness">Delete business profile</a></li>
 {% endblock %}
