--- a/app/templates/registerbusiness.html
+++ b/app/templates/registerbusiness.html
@@ -9,9 +9,10 @@
 </div>
 <h1>Please register business</h1>
 <br>
-<form action="" method="post">
-    <input type="text" placeholder="business" name="andela" value="{{ request.form.business}}">
+<form action="mybusinesses">
+    <input type="text" placeholder="business" name="simba" value="{{ request.form.business}}">
     <input type="text" placeholder="location" name="kampala" value="{{request.form.location}}">
+    <input type="text" placeholder="category" name="technology" value="{{request.form.category}}">
 <input class="btn btn-default" type="submit" value="Register">
 </form>
 {% endblock %}
