--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,13 @@
 {% block title %}Home{% endblock %}
 {% block body %}
 <div class="jumbotron">
-  <h1>WeConnect</h1>
-  <p class="lead">Having trouble getting your business on the map in your area?</p>
+    <h1>Make your business easy to find</h1>
+    <p class="lead">Read and write reviews on other businesses</p>
 </div>
+<h1>Welcome to WeConnect</h1>
+<br>
+<p>Click <a href="/login">here</a> to logout.</p>
+{% for message in get_flashed_messages() %}
+    {{ message }}
+{% endfor %}
 {% endblock %}
