--- a/app/templates/mybusinesses.html
+++ b/app/templates/mybusinesses.html
@@ -5,8 +5,8 @@
 {% block body %}
 <div class="jumbotron">
   <h1>Already a member?</h1>
-  <p class="lead">Keep your business details up to date.</p>
 </div>
+<h1>Keep your business details up to date.</h1>
 <table style="width:100%">
   <tr>
     <th>Business</th>
