--- a/app/templates/registerbusiness.html
+++ b/app/templates/registerbusiness.html
@@ -5,9 +5,8 @@
 {% block body %}
 <div class="jumbotron">
   <h1>Make your business easy to find.</h1>
-  <p class="lead">Read and write reviews on businesses in your location.</p>
 </div>
-<h1>Please register business</h1>
+<h1>Please register your business</h1>
 <br>
 <form action="mybusinesses">
     <input type="text" placeholder="business" name="simba" value="{{ request.form.business}}">
