--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,130 +1,51 @@
-<!--signup.html-->
 <!DOCTYPE html>
-<html>
-<style>
-body {font-family: Arial;}
-* {box-sizing: border-box}
-
-/* Full-width input fields */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-}
-
-input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-}
-
-hr {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
-}
-
-/* Set a style for all buttons */
-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-}
-
-button:hover {
-    opacity:1;
-}
-
-/* Extra styles for the cancel button */
-.cancelbtn {
-    padding: 14px 20px;
-    background-color: #f44336;
-}
-
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
-  float: left;
-  width: 50%;
-}
-
-/* Add padding to container elements */
-.container {
-    padding: 16px;
-}
-
-/* Clear floats */
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-    .cancelbtn, .signupbtn {
-       width: 100%;
-    }
-}
-</style>
-<body>
-
-<form action="/action_page.php" style="border:1px solid #ccc">
-  <div class="container">
-    <h1>Sign Up</h1>
-    <p>Please fill in this form to create an account.</p>
-    <hr>
-
-    <label><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
-
-    <label><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-
-    <label><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-    
-    <label>
-      <input type="checkbox" checked="checked" style="margin-bottom:15px"> Remember me
-    </label>
-    
-    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-    <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <button type="submit" class="signupbtn">Sign Up</button>
-    </div>
-  </div>
-</form>
-
-</body>
-</html>
-
-<!--<!DOCTYPE html>
-
 <html lang="en">
-    <head> 
-        <title>Business.r sign up page</title>
-        <style>
-                body {background-color: powderblue;}
-                h1   {color: blue;}
-                h1   {text-align:center;}
-                p    {color: red;}
-                </style>
-    </head>
-    <body>
-        <div>
-        <h1 style="font-size:300%;">BUSINESS.R</h1>
-        
-        <p style="font-size:160%;">Having trouble getting your business on the map in your area?<br/>Welcome to business.r, please sign up to register your business and join a world of 21st century entrepreneurs.</p>
-        </div>
-        <h2>Register with us below</h2>
-        <form></form>
-
-    </body>
-</html>-->
+  <head>
+    <title>{% block title %}{% endblock %}</title>
+    <!-- Bootstrap core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation"><a href="/signup">Home</a></li>
+            <li role="presentation"><a href="/signup">Register business</a></li>
+            <li role="presentation"><a href="/signup">My businesses</a></li>
+            <li role="presentation"><a href="/signup">Search</a></li>
+            <li role="presentation"><a href="/signup">Sign Up</a></li>
+            <li role="presentation"><a href="/login">Log Out</a></li>
+            <!--<li role="presentation"><a href="http://flask.pocoo.org" target="_blank">More About Flask</a></li>-->
+          </ul>
+        </nav>
+      </div>
+      {% block body %}
+      {% endblock %}
+      
+      {%if error%}
+        <p class="error"><strong>Error:</strong> {{error}}</p>
+      {%endif%}
+    </div><!-- /container -->
+    <div class= "container">
+    <div class="jumbotron">
+        <h1>WeConnect</h1>
+        <p class="lead">Read and write reviews on other businesses</p>
+    </div>
+    </div>
+    <div class= "container">
+      <h1>Sign up</h1>
+      <br>
+      <form action="registerbusiness">
+          <input type="text" placeholder="Username" name="username" value="{{ request.form.username}}">
+          <input type="password" placeholder="Password" name="password" value="{{request.form.password}}">
+      <input class="btn btn-default" type="submit" value="Sign Up">
+      </form> 
+      <footer class="footer">
+        <p>© 2018 WeConnect</p>
+      </footer>
+    
+  </body>
+</html>
